# tmp-ios-bazel-preview-test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
Swordle/: BUILD  BUILD.bazel  Info.plist  SwordleApp.swift  defs.bzl
Swordle.xcodeproj/: project.pbxproj
Swordle.xcodeproj/project.xcworkspace/xcuserdata/jmyrose.xcuserdatad/: UserInterfaceState.xcuserstate
Swordle.xcodeproj/xcuserdata/jmyrose.xcuserdatad/xcschemes/: xcschememanagement.plist
Swordle/Info/: Base.plist  Dev.plist  Staging.plist
Swordle/Sources/: BrazeManager.swift  EventAnalytics.swift  SwordleApp.swift  ViewExtensions.swift
Swordle/Tests/: BUILD.bazel
